--- a/src/main/resources/mails/templates/waiting-deposit.html
+++ b/src/main/resources/mails/templates/waiting-deposit.html
@@ -146,8 +146,8 @@
                                                                 style="padding-left:10px;padding-right:10px;text-align:center;width:100%;">
                                                                 <h1
                                                                     style="margin: 0; white-space: nowrap;color: rgb(35, 61, 86); direction: ltr; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 20px; font-weight: 700; letter-spacing: normal; line-height: 24px; text-align: center; margin-top: 0; margin-bottom: 0;">
-                                                                    <strong><span>Votre commande est en attente de
-                                                                            l'acompte</span></strong>
+                                                                    <strong><span>Votre commande est en attente
+                                                                            d'acompte</span></strong>
                                                                 </h1>
                                                             </td>
                                                         </tr>
