--- a/client/src/app/modules/administration/components/competent-authority/competent-authority.component.html
+++ b/client/src/app/modules/administration/components/competent-authority/competent-authority.component.html
@@ -63,6 +63,12 @@
                       hint="A utiliser lorsque la TVA intercommunautaire n'est pas présente sur les factures"
                       [isDisabled]="!editMode"></generic-input>
                   </td>
+                  <td>
+                    <autocomplete-provider [(model)]="selectedcompetentAuthority.provider" [form]="entityForm2"
+                      propertyName="provider" [isMandatory]="false" [isDisabled]="!editMode"
+                      [isDisabled]="!editMode || (selectedcompetentAuthority!=undefined && selectedcompetentAuthority!=null && selectedcompetentAuthority.provider!=undefined && selectedcompetentAuthority.provider!=null)"
+                      label="Fournisseur associé"></autocomplete-provider>
+                  </td>
                 </tr>
               </table>
               <table class="full-width">
