--- a/src/main/resources/mails/templates/customer-order-in-progress.html
+++ b/src/main/resources/mails/templates/customer-order-in-progress.html
@@ -210,8 +210,7 @@
                                                                 <p>Bonjour <span th:text="${customerName}"></span>,</p>
                                                                 <p>Nous vous confirmons le traitement de votre commande.
                                                                 </p>
-                                                                <p>Elle sera traitée dans les meilleurs délais par votre
-                                                                    formaliste <span
+                                                                <p>Elle sera traitée dans les meilleurs délais par <span
                                                                         th:text="${customerOrder.assoAffaireOrders[0].assignedTo.firstname}"></span>
                                                                     <span
                                                                         th:text="${customerOrder.assoAffaireOrders[0].assignedTo.lastname}"></span>
