--- a/client/src/app/modules/administration/components/provider/provider.component.html
+++ b/client/src/app/modules/administration/components/provider/provider.component.html
@@ -157,6 +157,11 @@
           [invoiceSearch]="invoiceSearch" [isForTiersIntegration]="true"></invoice-list>
       </ng-template>
     </mat-tab>
+    <mat-tab label="Comptes" *ngIf="providerAccountSearch && providerAccountSearch.id">
+      <ng-template matTabContent>
+        <accounting-record [tiersToDisplay]="providerAccountSearch"></accounting-record>
+      </ng-template>
+    </mat-tab>
     <mat-tab label="Documents" *ngIf="selectedProvider.id">
       <attachments [entity]="selectedProvider" [editMode]="editMode" [entityType]="PROVIDER_ENTITY_TYPE.entityType">
       </attachments>
