--- a/client/src/app/modules/quotation/components/formalite/formalite.component.html
+++ b/client/src/app/modules/quotation/components/formalite/formalite.component.html
@@ -13,7 +13,8 @@
             </button>
           </div>
           <sort-table [columns]="displayedColumns" [values]="formalites" tableName="Liasses Formalites"
-            [filterText]="searchText" [actions]="tableAction"></sort-table>
+            [refreshTable]="refreshFormalityTable.asObservable()" [filterText]="searchText"
+            [actions]="tableAction"></sort-table>
         </div>
       </div>
       <div class="form-div">
