--- a/client/src/app/modules/quotation/components/customer-order-comment/customer-order-comment.component.css
+++ b/client/src/app/modules/quotation/components/customer-order-comment/customer-order-comment.component.css
@@ -26,6 +26,14 @@ editor {
   right: 0px;
 }
 
+.read-icon {
+  padding: 0px;
+  position: absolute;
+  top: 0px;
+  right: 24px;
+  color:  var(--accent-color);
+}
+
 .speech-wrapper {
   .bubble-for-myself {
     border-color: var(--warn-color) !important;
@@ -84,6 +92,5 @@ editor {
     .bubble-arrow-for-myself:after {
       border-top-color: var(--warn-color) !important;
     }
-
   }
 }
