--- a/client/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -97,7 +97,18 @@
 
   <mat-sidenav-content class="padding-bottom">
     <div *ngIf="!editMode && !quotation.id && !isQuotationUrl && !idQuotation">
-      <ordering-list></ordering-list>
+      <mat-tab-group animationDuration="0ms">
+        <mat-tab label="Commandes">
+          <ng-template matTabContent>
+            <ordering-list></ordering-list>
+          </ng-template>
+        </mat-tab>
+        <mat-tab label="Commandes taggées">
+          <ng-template matTabContent>
+            <ordering-list-tagged></ordering-list-tagged>
+          </ng-template>
+        </mat-tab>
+      </mat-tab-group>
     </div>
     <div *ngIf="!editMode && !quotation.id && isQuotationUrl && !idQuotation">
       <quotation-list></quotation-list>
