add service label in title of template mail missing attachment query

--- a/src/main/resources/mails/templates/missing-attachment.html
+++ b/src/main/resources/mails/templates/missing-attachment.html
@@ -164,7 +164,8 @@
                                                                         <span>Commande n°<span
                                                                                 th:text="${customerOrder.id}"></span>
                                                                             - <span th:text="${affaireLabel}">
-                                                                            </span></span>
+                                                                            </span> - <span th:text="${serviceLabel}">
+                                                                            </span> </span>
                                                                     </div>
                                                                 </div>
                                                             </td>
