--- a/src/main/resources/mails/templates/billing-closure.html
+++ b/src/main/resources/mails/templates/billing-closure.html
@@ -160,9 +160,11 @@
                                                                 <div style="font-family: Arial, sans-serif">
                                                                     <div
                                                                         style="font-size: 22px;font-weight: 700; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; mso-line-height-alt: 16.8px; color: rgb(196, 174, 139); line-height: 1.2;text-align: center;">
-                                                                        <span>Client n°<span
-                                                                                th:text="${tiers.id}"></span>
-                                                                        </span></span>
+                                                                        <span>Client n°<span th:text="${tiers.id}"> -
+                                                                            </span>
+                                                                            <span
+                                                                                th:text="${tiers.denomination}"></span>
+                                                                        </span>
                                                                     </div>
                                                                 </div>
                                                             </td>
