correct Kbis label in referential component

--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -157,9 +157,9 @@
           </tr>
           <tr>
             <td>
-              <select-attachment-type [(model)]="constant.attachmentTypeKbis" label="Type de pièce-jointe - KBIS"
-                [form]="constantForm" propertyName="attachmentTypeKbis" [isMandatory]="true" [isDisabled]="!editMode"
-                [byPassAttachmentHiddenFilter]="true">
+              <select-attachment-type [(model)]="constant.attachmentTypeKbis"
+                label="Type de pièce-jointe - Kbis mis à jour" [form]="constantForm" propertyName="attachmentTypeKbis"
+                [isMandatory]="true" [isDisabled]="!editMode" [byPassAttachmentHiddenFilter]="true">
               </select-attachment-type>
             </td>
           </tr>
