--- a/client/src/app/modules/miscellaneous/components/multiple-upload/multiple-upload.component.html
+++ b/client/src/app/modules/miscellaneous/components/multiple-upload/multiple-upload.component.html
@@ -32,6 +32,9 @@
       </tr>
     </table>
     <div *ngIf="files && files.length>0 && !isDirectUpload">
+      <div *ngFor="let file of files">
+        {{ file?.name }} ({{ formatBytes(file?.size,1) }})
+      </div>
       <div *ngIf="isSending">
         <mat-progress-bar mode="determinate" [value]="progress/files.length*100"></mat-progress-bar>
       </div>
