--- a/client/src/app/modules/quotation/components/service/service.component.html
+++ b/client/src/app/modules/quotation/components/service/service.component.html
@@ -62,8 +62,12 @@
     </div>
   </ng-container>
 
-  <div style="width: 100%;text-align: right;" *ngIf="editMode">
-    <button matTooltip="Changer de statut" mat-fab color="accent" matTooltip="Ajouter un nouveau type de document"
+  <div style="width: 100%;text-align: right;">
+    <button matTooltip="Télécharger tous les documents" mat-fab color="accent" (click)="downloadAllFiles()"
+      *ngIf="!editMode">
+      <mat-icon>download</mat-icon>
+    </button>
+    <button mat-fab color="accent" matTooltip="Ajouter un nouveau type de document" *ngIf="editMode"
       (click)="addNewDocumentType(service)">
       <mat-icon>post_add</mat-icon>
     </button>
